ext {
    VERSION_CODE = libs.versions.appVersionCode.get().toInteger()
    VERSION_NAME = libs.versions.appVersionName.get()
    SDK_MIN_VERSION = libs.versions.sdkMin.get().toInteger()
    SDK_TARGET_VERSION = libs.versions.sdkTarget.get().toInteger()
    SDK_COMPILE_VERSION = libs.versions.sdkCompile.get().toInteger()
    localProps = gradle.ext.localProps

    ANDROID_MATERIAL_VERSION = libs.versions.androidMaterial.get()
    ANDROID_PLAY_CORE_FD_VERSION = libs.versions.googlePlayFeatureDelivery.get()
    ANDROIDX_CORE_VERSION = libs.versions.androidxCore.get()
    ANDROIDX_ANNOTATION_VERSION = libs.versions.androidxAnnotation.get()
    ANDROIDX_MEDIA_VERSION = libs.versions.androidxMedia.get()
    ANDROIDX_APPCOMPAT_VERSION = libs.versions.androidxAppcompat.get()
    ANDROIDX_CONSTRAINTLAYOUT_VERSION = libs.versions.androidxConstraintlayout.get()
    ANDROIDX_SWIPEREFRESHLAYOUT_VERSION = libs.versions.androidxSwiperefreshlayout.get()
    GUAVA_VERSION = libs.versions.guava.get()

    addons = [
            [
                    name       : 'translate',
                    id         : 'translate_addon',
                    icon       : 'translate',
                    class      : 'me.aap.fermata.addon.TranslateAddon',
                    hasSettings: false
            ],
            [
                    name   : 'subgen',
                    id     : 'subgen_addon',
                    icon   : 'subgen',
                    class  : 'me.aap.fermata.addon.SubGenAddon',
                    depends: 'exoplayer,translate'
            ],
    ]
}

buildscript {

    repositories {
        google()
        mavenCentral()
        gradlePluginPortal()
    }

    dependencies {
        classpath "com.android.tools.build:gradle:${libs.versions.agp.get()}"
        classpath "com.google.gms:google-services:${libs.versions.googleServices.get()}"
    }
}

allprojects {
    repositories {
        google()
        mavenCentral()
        gradlePluginPortal()
    }
}

subprojects {
    def isDynFeature = false

    if ('fermata'.equals(name)) {
        apply plugin: 'com.android.application'
    } else if (gradle.ext.modules.contains(':' + name)) {
        isDynFeature = true
        apply plugin: 'com.android.dynamic-feature'
    } else {
        apply plugin: 'com.android.library'
    }

    android {
        compileSdk SDK_COMPILE_VERSION
        ndkVersion = libs.versions.ndkVersion.get()

        defaultConfig {
            minSdkVersion SDK_MIN_VERSION
            targetSdkVersion SDK_TARGET_VERSION
            vectorDrawables.useSupportLibrary = true
            testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
            resConfigs 'en', 'ru', 'it', 'tr', 'de', 'pt', 'vi', 'pl', 'hr', 'ja', 'zh_TW', 'ko',
                    'fr', 'ro', 'ar', 'es', 'km'
        }

        if (isDynFeature) {
            flavorDimensions "version"

            productFlavors {
                mobile {
                    dimension "version"
                }
                auto {
                    dimension "version"
                    applicationIdSuffix '.auto' + project.getProperties().getOrDefault('APP_ID_SFX', '')
                }
            }
        }

        buildFeatures {
            buildConfig = true
            resValues = true
        }

        compileOptions {
            sourceCompatibility = JavaVersion.VERSION_17
            targetCompatibility = JavaVersion.VERSION_17
            coreLibraryDesugaringEnabled = true
        }

        testOptions {
            unitTests.returnDefaultValues = true
        }

        dependencies {
            coreLibraryDesugaring libs.desugarJdkLibs
        }
    }

    dependencies {
        testImplementation libs.junit4
        androidTestImplementation libs.androidxTestJunit
        androidTestImplementation libs.androidxTestEspresso
    }

    configurations.configureEach {
        resolutionStrategy {
            preferProjectModules()
            eachDependency { details ->
                if (details.requested.group == 'com.google.guava' && details.requested.name == 'guava') {
                    details.useVersion GUAVA_VERSION
                }
            }
        }
    }
}

gradle.projectsEvaluated {
    def addons = new ArrayList<HashMap>(ext.addons)
    gradle.ext.modules.forEach {
        def p = project(it)
        if (p.ext.has('addons')) {
            p.ext.addons.forEach {
                def info = new HashMap(it)
                info['module'] = p.name
                addons.add(info)
            }
        }
    }

    def addonInfo = new StringBuilder(1024)
    addonInfo.append('me.aap.utils.collection.CollectionUtils.sort(new me.aap.fermata.addon.AddonInfo[] {\n')
    addons.forEach {
        def name = it['name']
        def id = it.containsKey('id') ? "R.id.${it['id']}" : "0"
        addonInfo.append("  new me.aap.fermata.addon.AddonInfo(" +
                "\"${it.get('module', name)}\", \"${it['class']}\", " +
                "${id}, " +
                "R.string.addon_name_${name}, R.drawable.${it['icon']}, " +
                "${it['order']}, ${it['hasSettings']}, ${it.get('fragment', false)}, ${it['enabled']}, " +
                "${it.get('auto', false)}, \"${it.get('depends', "")}\"),\n")
    }

    def infoStr = addonInfo.append('})').toString()
    project(':fermata').android.productFlavors.forEach {
        it.buildConfigField 'me.aap.fermata.addon.AddonInfo[]', 'ADDONS', infoStr
    }
}

tasks.register('clean', Delete) {
    delete rootProject.layout.buildDirectory
}

if (file('build-custom.gradle').exists()) {
    apply from: 'build-custom.gradle'
}
